--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,9 @@
 
   const specialWords = {
     "job": "employment",
-    "kitty": "cat"
+    "kitty": "cat",
+    "maple syrup": "syrup",
+    "rune": "glyph"
   };
 
   function normalizeEnglish(text) {
