--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Azkiez Translator with Real Font</title>
+  <title>Azkiez Translator</title>
   <style>
     @font-face {
       font-family: 'Azkiez';
@@ -96,7 +96,7 @@
 </head>
 <body>
 
-<h1>Azkiez ⇄ English Translator (Real Font Loaded)</h1>
+<h1>Azkiez ⇄ English Translator</h1>
 
 <div id="modeToggleContainer">
   <label>
